--- a/src/components/WelcomeAnimation/styles.css
+++ b/src/components/WelcomeAnimation/styles.css
@@ -3,20 +3,22 @@
   background-position: center;
   background-size: cover;
   position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 10;
+  max-width: 500px;
+  left: 50%;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-50%);
 
   transition: transform 0.5s 2s;
 }
 
 .welcome-animation_hidden {
-  transform: translateY(-100%);
+  transform: translateY(-100%) translateX(-50%);
 }
 
 .welcome-animation__title {
